# pusula-desktop

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  promote-release.yml  release.yml
docs/: BACKUP_RESTORE_RUNBOOK.md  CODE_SIGNING.md  GATEWAY_DEPLOYMENT_READINESS.md  INSTALLATION_AND_UPDATES.md  MIGRATION_RUNBOOK.md  OFFLINE_ACCEPTANCE_TEST.md  RECOVERY_KEY_CUSTODY.md  RELEASE_RUNBOOK.md  RESTORE_HARNESS.md  acceptance-evidence.template.json
gateway/: .gitignore  Cargo.toml  README.md  RUNBOOK.md  pusula-backup-gateway.env.example
gateway/deploy/: pusula-backup-gateway.service
gateway/deploy/apache/: cpanel-ssl.conf.example  cpanel-std.conf.example
gateway/migrations/: 0001_initial.sql  0002_relay_attempted_at.sql  0003_backup_admission_and_verification.sql  0004_local_storage_retention.sql
gateway/src/: api.rs  b2.rs  config.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  storage.rs
gateway/tests/: gateway_api.rs
scripts/: Decode-ReleaseAcceptanceEvidence.ps1  Invoke-ArtifactSigning.ps1  Invoke-InvalidUpdaterRuntime.mjs  New-CandidateUpdaterConfig.ps1  New-PusulaRecoveryKit.ps1  New-ReleaseAcceptanceEvidence.ps1  New-UpdateManifest.ps1  Prepare-ResumableCandidateRelease.ps1  Prepare-ResumableStableRelease.ps1  Publish-VerifiedRelease.ps1  Release-AcceptanceEvidence.ps1  Release-RepositoryControls.ps1  Release-SemVer.ps1  Restore-PusulaBackup.ps1  Test-CandidatePromotion.ps1  Test-InvalidTauriUpdaterAcceptance.ps1  Test-ReleaseAcceptanceEvidence.ps1  Test-ReleaseAssets.ps1  Test-ReleaseIdentity.ps1  Test-TauriUpdaterSignature.ps1  Test-VersionConsistency.ps1
src/: data-management.ts  html-safety.js  main.ts  pusula-app.css  pusula-app.js  styles.css  update-policy.js  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.updater.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  backup.rs  db.rs  error.rs  lib.rs  main.rs  models.rs
src-tauri/tests/: database_integration.rs
tests/: candidate-release-resume.tests.ps1  data-management-contract.test.mjs  frontend-security.test.mjs  invalid-updater-signature-harness.tests.ps1  recovery-custody.tests.ps1  release-acceptance-evidence.tests.ps1  release-policy.tests.ps1  release-publication.tests.ps1  restore-harness.tests.ps1  updater-contract.test.mjs
tests/fixtures/: pusula-lite-v1.json
